[project]
name = "gumui"
version = "0.1.1"
description = "Python bindings for Gum UI (.NET runtime via PythonNET)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jeremy Swartwood", email = "jeremy.swartwood@gmail.com" },
  { name = "Victor Chelaru", email = "VicChelaru@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "pythonnet>=3.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gumui = [
    "stubs/**/*.pyi",
    "py.typed",
    "_clr/net6.0/*",
    "examples/**/*"
]
